--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
 # Compiled class file
 *.class
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
@@ -19,5 +10,13 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Log file
+*.log
+# virtual machine crash logs
 hs_err_pid*
+
+# idea
+.idea/
+# gradle
+.gradle/
+
