--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
     compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'
+    compile group: 'org.apache.opennlp', name: 'opennlp-tools', version: '1.9.1'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
 
