--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-text', version: '1.7'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compile group: 'org.apache.lucene', name: 'lucene-core', version: '8.1.1'
+    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.1.1'
 
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
