--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,19 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.6.RELEASE")
+    }
+}
+
 plugins {
     id 'java'
 }
+
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
 
 group 'ua.in.sz.english'
 version '1.0-SNAPSHOT'
@@ -11,7 +24,14 @@ repositories {
     mavenCentral()
 }
 
+bootJar {
+    baseName = 'english-learn'
+    version =  '0.1.0'
+}
+
 dependencies {
+    compile("org.springframework.boot:spring-boot-starter-web")
+
     compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'
     compile group: 'org.apache.opennlp', name: 'opennlp-tools', version: '1.9.1'
     compile group: 'org.apache.commons', name: 'commons-text', version: '1.7'
