#4 Create web application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.output.ansi.enabled=always
 logging.file=work/application.log
+book.path=e:/_book/_development/_book/domain-driven-design-distilled.pdf
+page.path=K:/projects/english/work/page.txt
