#4 Create web application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.output.ansi.enabled=always
 logging.file=work/application.log
 book.path=e:/_book/_development/_book/domain-driven-design-distilled.pdf
 page.path=K:/projects/english/work/page.txt
+sentence.path=K:/projects/english/work/sentence.txt
