#4 Create web application. Integrate indexing process

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ logging.file=work/application.log
 book.path=e:/_book/_development/_book/domain-driven-design-distilled.pdf
 text.path=K:/projects/english/work/page.txt
 sentence.path=K:/projects/english/work/sentence.txt
+index.path=K:/projects/english/index
