#7 As User, I want use UI to find english sentence

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -32,6 +32,11 @@ bootJar {
     }
 }
 
+bootRun {
+    classpath += files("$projectDir/../frontend/dist")
+}
+
+bootRun.dependsOn(':frontend:assemble')
 bootJar.dependsOn(':frontend:assemble')
 
 dependencies {
