#7 As User, I want use UI to find english sentence

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,7 +27,7 @@ repositories {
 bootJar {
     baseName = 'english-learn'
     version = '0.1.0'
-    from('../frontend/dist') {
+    from('../frontend/dist/static') {
         into 'static'
     }
 }
