#6 I as Admin, I want parse and search more one book.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,6 @@ book.path=e:/_book/_development/_book/domain-driven-design-distilled.pdf
 text.path=K:/projects/english/work/page.txt
 sentence.path=K:/projects/english/work/sentence.txt
 index.path=K:/projects/english/index
+
+book.dir.path=e:/_book/_development/_book
+text.dir.path=K:/projects/english/work/text
