#6 I as Admin, I want parse and search more one book.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,3 +7,4 @@ index.path=K:/projects/english/index
 
 book.dir.path=e:/_book/_development/_book
 text.dir.path=K:/projects/english/work/text
+sentence.dir.path=K:/projects/english/work/sentence
