--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,7 @@
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.2",
     "react-translate-component": "^0.10.0",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "bootstrap": "^4.1.1"
   }
 }
