Try use spring integration to build index

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -40,6 +40,9 @@ bootJar.dependsOn(':frontend:assemble')
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile('org.springframework.boot:spring-boot-starter-integration')
+    compile('org.springframework.integration:spring-integration-file')
+
 
     compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'
     compile group: 'org.apache.opennlp', name: 'opennlp-tools', version: '1.9.1'
