--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -54,6 +54,7 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
