As User I want identify parts of speech (noun, verb) #14

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ logging:
   file: work/application.log
 
 english:
-  bookDirPath: e:/_book/_development/_book
+  bookDirPath: e:/_book/_development/!book
   textDirPath: K:/projects/english/work/text
   sentenceDirPath: K:/projects/english/work/sentence
   indexDirPath: K:/projects/english/index
