--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -45,7 +45,8 @@ dependencies {
     compile group: 'org.apache.opennlp', name: 'opennlp-tools', version: '1.9.1'
     compile group: 'org.apache.lucene', name: 'lucene-core', version: '8.1.1'
     compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.1.1'
-    
+//    compile group: 'org.apache.lucene', name: 'lucene-analyzers-opennlp', version: '8.1.1'
+
     compile group: 'org.apache.commons', name: 'commons-text', version: '1.7'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
