As Dev I want migrate to spring integration for take extendability. #16

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
 plugins {
     id 'java'
+    id 'checkstyle'
 }
 
 apply plugin: 'org.springframework.boot'
@@ -19,6 +20,11 @@ group 'ua.in.sz.english'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
+
+checkstyle {
+    toolVersion '7.8.1'
+    configFile file("checkstyle.xml")
+}
 
 repositories {
     mavenCentral()
@@ -36,29 +42,44 @@ bootRun {
     group = APP_BACKEND_TASK_GROUP
 }
 
+test {
+    useJUnitPlatform()
+}
+
+bootJar.dependsOn(checkstyleMain)
 bootJar.dependsOn(':frontend:assemble')
 
+dependencyManagement {
+    imports {
+        mavenBom "io.projectreactor:reactor-bom:Aluminium-SR1"
+    }
+}
+
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile('org.springframework.boot:spring-boot-starter-integration')
-    compile('org.springframework.integration:spring-integration-file')
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-batch"
 
+    compile "org.hsqldb:hsqldb"
 
-    compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'
-    compile group: 'org.apache.opennlp', name: 'opennlp-tools', version: '1.9.1'
-    compile group: 'org.apache.lucene', name: 'lucene-core', version: '8.1.1'
-    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.1.1'
-//    compile group: 'org.apache.lucene', name: 'lucene-analyzers-opennlp', version: '8.1.1'
+    compile 'com.itextpdf:itextpdf:5.5.13.1'
+    compile 'org.apache.opennlp:opennlp-tools:1.9.1'
+    compile 'org.apache.lucene:lucene-core:8.1.1'
+    compile 'org.apache.lucene:lucene-queryparser:8.1.1'
 
-    compile group: 'org.apache.commons', name: 'commons-text', version: '1.7'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
-    compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    compile 'com.google.guava:guava:28.0-jre'
+    compile 'org.apache.commons:commons-text:1.7'
+    compile 'org.apache.commons:commons-lang3:3.9'
+    compile 'commons-io:commons-io:2.6'
 
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    compile 'ch.qos.logback:logback-classic:1.2.3'
+    compile 'org.fusesource.jansi:jansi:1.8'
 
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'com.tngtech.archunit:archunit-junit5-api:0.11.0'
+    testCompile 'org.mockito:mockito-junit-jupiter:2.23.4'
+    testRuntime 'com.tngtech.archunit:archunit-junit5-engine:0.11.0'
+    testCompile 'org.junit.jupiter:junit-jupiter:5.5.1'
 }
