--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -5,6 +5,9 @@ spring:
   batch:
     job:
       enabled: false
+  data:
+    mongodb:
+      uri: mongodb://root:root@localhost:27017/test_db
 
 logging:
   file: work/application.log
@@ -12,6 +15,7 @@ logging:
     console: "%clr(%d{HH:mm:ss.SSS}){faint} %clr(%5p) %clr([%20.20t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
 
 english:
+  wordStoreType: mongo
   bookDirPath: e:/_book/_development/!book
   textDirPath: K:/projects/english/work/text
   sentenceDirPath: K:/projects/english/work/sentence
