--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -11,6 +11,8 @@ repositories {
 }
 
 dependencies {
+    compile 'commons-cli:commons-cli:1.4'
+
     // common utils
     compile 'com.google.guava:guava:28.0-jre'
     compile 'org.apache.commons:commons-text:1.7'
@@ -20,6 +22,9 @@ dependencies {
     // development
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
+
+    // logging
+    compile 'ch.qos.logback:logback-classic:1.2.3'
 
     // testing
     testCompile 'org.junit.jupiter:junit-jupiter:5.5.1'
