--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -10,6 +10,18 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'ua.in.sz.english.tools.Dictionary'
+        )
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 dependencies {
     compile 'commons-cli:commons-cli:1.4'
 
