--- a/dict2json/build.gradle
+++ b/dict2json/build.gradle
@@ -14,7 +14,7 @@ repositories {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'ua.in.sz.english.dict2json.Dictionary'
+                'Main-Class': 'ua.in.sz.english.dict2json.DictionaryToJson'
         )
     }
 
@@ -51,6 +51,7 @@ dependencies {
     compile 'com.google.guava:guava:28.0-jre'
     compile 'org.apache.commons:commons-text:1.7'
     compile 'org.apache.commons:commons-lang3:3.9'
+    compile 'org.apache.commons:commons-collections4:4.4'
     compile 'commons-io:commons-io:2.6'
 
     // development
