As Dev I want migrate to spring batch for take extendability. #18

--- a/dict2json/build.gradle
+++ b/dict2json/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'distribution'
+    id 'antlr'
 }
 
 version 'unspecified'
@@ -26,6 +27,7 @@ jar {
 }
 
 distributions {
+    //noinspection GroovyAssignabilityCheck
     main {
         baseName = 'dict2json'
         contents {
@@ -44,8 +46,23 @@ task copy2bin(type: Copy) {
 
 copy2bin.dependsOn(installDist)
 
+generateGrammarSource {
+    maxHeapSize = "64m"
+
+    /* doLast {
+        copy {
+            from "${buildDir}/generated-src/antlr/main"
+            into "src/main/java"
+        }
+    } */
+}
+
 dependencies {
     compile 'commons-cli:commons-cli:1.4'
+
+    // parsing
+    antlr "org.antlr:antlr4:4.7.2"
+    compile "org.antlr:antlr4-runtime:4.7.2"
 
     // common utils
     compile 'com.google.guava:guava:28.0-jre'
