As Dev I want migrate to spring batch for take extendability. #18

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-batch"
     compile "org.springframework.boot:spring-boot-starter-data-mongodb"
+    compile "com.github.ulisesbocchio:jasypt-spring-boot-starter:2.1.2"
 
     // data processing
     compile 'com.itextpdf:itextpdf:5.5.13.1'
