--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -15,6 +15,7 @@ logging:
     console: "%clr(%d{HH:mm:ss.SSS}){faint} %clr(%5p) %clr([%20.20t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
 
 english:
+  author: ENC(WOJJ7L3glQ6gmc4C1GtQuWhpkvUYOLwhOfYLaOw5MBM=)
   wordStoreType: mongo
   bookDirPath: e:/_book/_development/!book
   textDirPath: K:/projects/english/work/text
