--- a/dict2json/build.gradle
+++ b/dict2json/build.gradle
@@ -69,4 +69,6 @@ dependencies {
 
     // testing
     testCompile 'org.junit.jupiter:junit-jupiter:5.5.1'
+    testCompile 'org.projectlombok:lombok:1.18.8'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.8'
 }
