--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,8 @@ frontend/node_modules/
 frontend/dist/
 /backend/build/*
 /backend/out/*
-/dict2json/build/*
-/dict2json/out/*
+/dict2json-regex/build/*
+/dict2json-regex/out/*
 
 /build/*
 /.gtm/
