--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.moowork.node" version "1.1.1"
+    id "com.moowork.node" version "1.3.1"
 }
 
 apply plugin: 'base'
@@ -8,8 +8,16 @@ version '0.0.1'
 buildDir = 'dist'
 
 node {
-    version = '10.16.0'
+    version = '12.16.2'
     download = true
+}
+
+repositories.whenObjectAdded {
+    if (it instanceof IvyArtifactRepository) {
+        metadataSources {
+            artifact()
+        }
+    }
 }
 
 task bundle(type: YarnTask) {
