--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -1,9 +1,11 @@
 plugins {
-    id "com.moowork.node" version "1.3.1"
+//    id "com.moowork.node" version "1.3.1"
+    id "com.github.node-gradle.node" version "3.1.0"
 }
 
-apply plugin: 'base'
+//apply plugin: 'base'
 version '0.0.1'
+/*
 
 buildDir = 'dist'
 
@@ -41,3 +43,4 @@ task nodeStop(type:Exec) {
 bundle.dependsOn(yarn_install)
 assemble.dependsOn(bundle)
 nodeRun.dependsOn(nodeStop)
+*/
